--- a/css/style.css
+++ b/css/style.css
@@ -141,7 +141,7 @@ h1{
 }
 .card1{
     border: 5px solid #ffbc38;
-    border-radius: 30%;
+    border-radius: 30px;
 }
 .custom{
     background-color: #ffbc38;
